@@ -68,6 +68,7 @@ final public class LwjglInput implements Input {
 	int pressedKeys = 0;
 	boolean keyJustPressed = false;
 	boolean[] justPressedKeys = new boolean[256];
+	boolean[] justPressedButtons = new boolean[5];
 	boolean justTouched = false;
 	IntSet pressedButtons = new IntSet();
 	InputProcessor processor;
@@ -803,7 +804,12 @@ final public class LwjglInput implements Input {
 	}
 
 	void updateMouse () {
-		justTouched = false;
+		if (justTouched) {
+			justTouched = false;
+			for (int i = 0; i < justPressedButtons.length; i++) {
+				justPressedButtons[i] = false;
+			}
+		}
 		if (Mouse.isCreated()) {
 			int events = 0;
 			while (Mouse.next()) {
@@ -836,6 +842,7 @@ final public class LwjglInput implements Input {
 					if (Mouse.getEventButtonState()) {
 						event.type = TouchEvent.TOUCH_DOWN;
 						pressedButtons.add(event.button);
+						justPressedButtons[event.button] = true;
 						justTouched = true;
 					} else {
 						event.type = TouchEvent.TOUCH_UP;
@@ -972,6 +979,12 @@ final public class LwjglInput implements Input {
 	@Override
 	public boolean isButtonPressed (int button) {
 		return Mouse.isButtonDown(toLwjglButton(button));
+	}
+
+	@Override
+	public boolean isButtonJustPressed(int button) {
+		if(button < 0 || button >= justPressedButtons.length) return false;
+		return justPressedButtons[button];
 	}
 
 	@Override
