@@ -1,4 +1,5 @@
 [1.9.9]
+- API Addition: Input.isButtonJustPressed
 - API Addition: Pressure support for ios/android. https://github.com/libgdx/libgdx/pull/5270
 - Update to Lwjgl 3.1.5! (Bad release)
 - Update to Lwjgl 3.1.4
